Deluge 0.9.10 - "1.0.0_RC10" (In Development)
 Core:
  * Include GeoIP database for country look-ups

Deluge 0.9.09 - "1.0.0_RC9" (15 September 2008)
 Core:
  * Bug fixes in libtorrent including a crash when the tracker doesn't
    have 'announce' in it's url.
  * Fix fastresume issue causing loss of data by deleting the fastresume file
    before writing a new one
  * Fix #475 the use of unicode paths when adding torrents
    
 GtkUI:
  * Fix add torrent dialog closing preventing another dialog from being shown
  * Fix various issues when not using English
  * Fix setting file priorities on folders

Deluge 0.9.08 - "1.0.0_RC8" (27 August 2008)
 Core:
  * Attempt to automatically upgrade a 0.5.x state file to new format
  * Tracker errors now change the tracker status
 
 Plugins:
  * Fix bug in Blocklist that prevented downloading a new file every X days
  
 GtkUI:
  * Sort filenames alphabetically in add torrent dialog
  * Fix setting file priorities on folders
  * Fix #453 allow showing of text in the toolbar buttons
  
Deluge 0.9.07 - "1.0.0_RC7" (18 August 2008)
 Core:
  * Fix loading torrents from state when fastresume file is missing
  * Fix UPnP
  * Fix to prevent Deluge from segfaulting when trying to autoadd an incomplete torrent file
  * Fix #407 possible negative ETA

 GtkUI:
  * Add 'edit' to edit trackers dialog
  * Improve performance of initial torrent list load
  * Fix hiding the bottom pane when disabling all the tabs
  * Fix not showing new torrents if you don't use the All label first
  * Fix size units to be more accurate
  * Fix torrentview sorting to be persistent
  * Fix not displaying file list when state changes
  * Expand root folder in files tab by default

 Null:
  * Fix #415 crash when using 'config-set' with no parameters
  
 Windows:
  * Fix Vista slowness issue
  * Fix properly shutting Deluge down when system shuts down
  * Fix opening folders/files
  
Deluge 0.9.06 - "1.0.0_RC6" (13 August 2008)
 Core:
  * Fix CPU spikes

 GtkUI: